--- a/indext.html
+++ b/indext.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="col-md-6 pr-md-5 content" data-aos="fade-up">
-                    <h1><span>Well Come To Storecode</span><span></span></h1>
+                    <h1><span>Wel Come To Storecode</span><span></span></h1>
                     <nav class="box">
                         <h2>Storecode for Influencers</h2>
                         <p>💰 Earn from every purchase made through your unique codes <br>
